# git-submodule-prep

./: .gitignore  README.md  setup.cfg
git_submodule_prep/: __init__.py  prep.py
