[metadata]
name = git-submodule-prep
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = "Simple git submodule wrapper to track and merge changes to an upstream repo"
version = attr: git_submodule_prep.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jevinskie/git-submodules-prep
license = BSD-2-Clause
license_files = LICENSE

[options]
python_requires = ~=3.10
packages = find:
zip_safe = True
install_requires =
  path

[options.entry_points]
console_scripts =
  git-submodule-prep = git_submodule_prep.prep:main

[build-system]
requires = ["setuptools"]
